--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 <body>
 
     <nav class="navigation">
+        <label class="hamburger">
+            <input type="checkbox" id="check">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
         <!-- <img src="./logos/Code Creator-logos_transparent_small.png" alt="Logo Creator"> -->
         <ul>
             <li><a href="#1">Strona główna</a></li>
@@ -45,6 +51,7 @@
             <p class="work">Front-End Web Developer</p>
             <p>Witaj na mojej stronie, gdzie znajdziesz moje ostatnie projekty, przydatne linki oraz pobierzesz moje CV.</p>
             <footer><a class="check-projects" href="#portfozlio">Sprawdź moje projekty</a></footer>
+            <span>-----------------------</span>
         </article>
 
         <article id="projects" class="projects">
