--- a/index.html
+++ b/index.html
@@ -56,11 +56,10 @@
 
         <article id="projects" class="projects">
             <header class="visually-hidden">Projekty</header>
-            <p>Cześć! Jestem Maciej</p>
-            <p class="work">Front-End Web Developer</p>
-            <p>Witaj na mojej stronie, gdzie znajdziesz moje ostatnie projekty, przydatne linki oraz pobierzesz moje CV.</p>
+            <p>Część moich projektów:</p>
+        
             <footer><a class="check-projects" href="#portfozlio">Sprawdź moje projekty</a></footer>
-    </article>
+        </article>
 
         <article id="contact">
             <header></header>
