hamburger menu collapsible for mobile

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <script src="./app.js" defer></script>
     <title>Document</title>
 
     
@@ -17,7 +18,7 @@
 
     <nav class="navigation">
         <label class="hamburger">
-            <input type="checkbox" id="check">
+            <input type="checkbox" id="check" >
             <span></span>
             <span></span>
             <span></span>
