form with formsubmit.io

--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
 
 
         
-                <form class="contact-form" style="font-size: 20px;" id="contactform" action="https://formsubmit.io/send/maciekgt540@gmail.com" method="POST">
-                    
+                <form class="contact-form" style="font-size: 20px;" id="contactform" action="https://formsubmit.io/send/maciekgt540@gmail.com" method="POST" target="_blank">
                     <label for="name" class="form-username">Imię:</label>
                     <input name="name" type="text" placeholder="Twoje imię" required class="form-username-input">
                     <label for="e-mail" class="form-email">E-mail:</label>
