about section cssing

--- a/index.html
+++ b/index.html
@@ -32,51 +32,109 @@
             </label>
             <!-- <img src="./logos/Code Creator-logos_transparent_small.png" alt="Logo Creator"> -->
             <ul>
-                <li><a href="#about">O mnie</a></li>
-                <li><a href="#projects">Projekty</a></li>
-                <li><a href="#contact">Kontakt</a></li>
-                <li><a href="#5">Pobierz CV</a></li>
+                <li>
+                    <a href="#about">O mnie</a>
+                </li>
+                <li>
+                    <a href="#education">Wykształcenie</a>
+                </li>
+                <li>
+                    <a href="#projects">Projekty</a>
+                </li>
+
+                <li>
+                    <a href="#contact">Kontakt</a>
+                </li>
+                <li>
+                    <a href="#5">Pobierz CV</a>
+                </li>
             </ul>
         </nav>
 
         <section class="main-content">
             <article id="about" class="about-article">
                 <title>O mnie</title>
-                <p>Jestem Maciej Ostrowski</p>
-                <strong>Front-End Developer</strong>
-                <p>Uczę się technologii takich jak:</p>
-                <ul>
-                    <li>HTML + CSS + Javascript</li>
-                    <li>React.js</li>
-                    <li>Express.js</li>
-                    <li>MongoDB</li>
-                </ul>
-                <p>
-                    Moje projekty korzystają z Git'a i są
-                    dostępne na Github.
-                </p>
-                <p>Pozostałe umiejętności:</p>
-                <ul>
-                    <li>Zarządzanie zespołem</li>
-                    <li>Język angielski B2</li>
-                    <li>
-                        Domyślnie czytam dokumentację w j.
-                        angielskim
-                    </li>
-                    <li>
-                        Znajomość środowiska Visual Studio
-                        Code
-                    </li>
-                </ul>
+                <header class="about-me-header">
+                    <img
+                        src="./images/my-photo.png"
+                        alt="Maciej Ostrowski Zdjęcie" />
+                    <div class="about-me">
+                        <h2>Jestem Maciej Ostrowski</h2>
+                        <strong>Front-end Developer</strong>
+                        <p>
+                            Programista z pasji, Front-end
+                            od 6 miesięcy
+                        </p>
+                    </div>
+                </header>
+
+                <div class="about-others">
+                    <section class="tech-stack">
+                        <p>
+                            Uczę się technologii takich jak:
+                        </p>
+                        <ul>
+                            <li>HTML + CSS + Javascript</li>
+                            <li>React.js</li>
+                            <li>Express.js</li>
+                            <li>MongoDB</li>
+                        </ul>
+                    </section>
+
+                    <section class="other-skills">
+                        <p>Pozostałe umiejętności:</p>
+                        <ul>
+                            <li>Zarządzanie zespołem</li>
+                            <li>Język angielski B2</li>
+                            <li>
+                                Domyślnie czytam
+                                dokumentację w j. angielskim
+                            </li>
+                            <li>
+                                Znajomość środowiska Visual
+                                Studio Code
+                            </li>
+                        </ul>
+                    </section>
+                    <section class="tech-stack">
+                        <p>
+                            Uczę się technologii takich jak:
+                        </p>
+                        <ul>
+                            <li>HTML + CSS + Javascript</li>
+                            <li>React.js</li>
+                            <li>Express.js</li>
+                            <li>MongoDB</li>
+                        </ul>
+                    </section>
+
+                    <section class="other-skills">
+                        <p>Pozostałe umiejętności:</p>
+                        <ul>
+                            <li>Zarządzanie zespołem</li>
+                            <li>Język angielski B2</li>
+                            <li>
+                                Domyślnie czytam
+                                dokumentację w j. angielskim
+                            </li>
+                            <li>
+                                Znajomość środowiska Visual
+                                Studio Code
+                            </li>
+                        </ul>
+                    </section>
+                </div>
             </article>
+
             <article
                 id="education"
                 class="education-article">
                 <title>Wykształcenie i kursy</title>
                 <section>
-                    <p>
-                        Akademia Nauk Stosowanych w Koninie
-                    </p>
+                    <h2>
+                        Państwowa Wyższa Szkoła Zawodowa w
+                        Koninie
+                    </h2>
                     <p>Kierunek: informatyka</p>
                     <p>Tytuł naukowy: licencjat</p>
                     <p>
@@ -90,7 +148,7 @@
                     </ul>
                 </section>
                 <section>
-                    <p>Kurs CODE:ME</p>
+                    <h2>Kurs CODE:ME</h2>
                     <p>
                         Tytuł: Javascript + React od podstaw
                     </p>
@@ -111,7 +169,7 @@
                     </ul>
                 </section>
                 <section>
-                    <p>Książki</p>
+                    <h2>Książki</h2>
                     <p>You don't know JS Kyle Simpson</p>
                     <p>Czysty kod Robert C. Martin</p>
                     <p>
@@ -122,6 +180,14 @@
                         JavaScript. Przewodnik. Poznaj język
                         mistrzów programowania. Wydanie VII
                         David Flanagan
+                    </p>
+                    <p>
+                        Git. Rozproszony system kontroli
+                        wersji Włodzimierz Gajda
+                    </p>
+                    <p>
+                        Git. Rozproszony system kontroli
+                        wersji Włodzimierz Gajda
                     </p>
                     <p>
                         Git. Rozproszony system kontroli
