--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <nav class="navigation">
             <label class="hamburger">
                 <input type="checkbox" id="check" />
-                ` <span></span>
+                <span></span>
                 <span></span>
                 <span></span>
             </label>
