--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- 
+            todo:
+            reader view 
+         -->
         <meta charset="UTF-8" />
         <meta
             http-equiv="X-UA-Compatible"
@@ -168,7 +172,7 @@
                         <li>Express.js</li>
                     </ul>
                 </section>
-                <section>
+                <section class="my-books">
                     <h2>Książki</h2>
                     <p>You don't know JS Kyle Simpson</p>
                     <p>Czysty kod Robert C. Martin</p>
@@ -180,14 +184,6 @@
                         JavaScript. Przewodnik. Poznaj język
                         mistrzów programowania. Wydanie VII
                         David Flanagan
-                    </p>
-                    <p>
-                        Git. Rozproszony system kontroli
-                        wersji Włodzimierz Gajda
-                    </p>
-                    <p>
-                        Git. Rozproszony system kontroli
-                        wersji Włodzimierz Gajda
                     </p>
                     <p>
                         Git. Rozproszony system kontroli
@@ -253,9 +249,6 @@
         <footer class="footer">
             <ul class="footer-navigation">
                 <li><a href="#about">O mnie</a></li>
-                <li><a href="#projects">Projekty</a></li>
-                <li><a href="#contact">Kontakt</a></li>
-                <li><a href="#5">Pobierz CV</a></li>
             </ul>
             <img
                 src="./logos/Code Creator-logos_transparent_small.png"
