changed About Me section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
             rel="stylesheet" />
+        <link
+            rel="preconnect"
+            href="https://fonts.googleapis.com" />
+        <link
+            rel="preconnect"
+            href="https://fonts.gstatic.com"
+            crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Anton&family=Lato:ital,wght@0,400;0,700;1,300&display=swap"
+            rel="stylesheet" />
         <link rel="stylesheet" href="./style.css" />
         <script src="./app.js" defer></script>
         <title>Maciej Ostrowski</title>
@@ -57,28 +67,35 @@
 
         <section class="main-content">
             <article id="about" class="about-article">
-                <title>O mnie</title>
-                <header class="about-me-header">
-                    <img
-                        src="./images/my-photo.png"
-                        alt="Maciej Ostrowski Zdjęcie" />
-                    <div class="about-me">
-                        <h2>Jestem Maciej Ostrowski</h2>
-                        <strong>Front-end Developer</strong>
-                        <p>
-                            Programista z pasji, Front-end
-                            od 6 miesięcy
-                        </p>
+                <section>
+                    <title>O mnie</title>
+                    <div class="about-me-header">
+                        <img
+                            src="./images/my-photo.png"
+                            alt="Maciej Ostrowski Zdjęcie" />
+                        <div class="about-me">
+                            <h2>Jestem Maciej Ostrowski</h2>
+                            <strong
+                                >Front-end Developer</strong
+                            >
+                            <p>
+                                Programista z pasji,
+                                Front-end od 6 miesięcy
+                            </p>
+                        </div>
                     </div>
-                </header>
+                </section>
 
                 <div class="about-others">
                     <section class="tech-stack">
-                        <p>
-                            Uczę się technologii takich jak:
-                        </p>
                         <ul>
-                            <li>HTML + CSS + Javascript</li>
+                            <h2>
+                                Uczę się technologii takich
+                                jak:
+                            </h2>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Javascript</li>
                             <li>React.js</li>
                             <li>Express.js</li>
                             <li>MongoDB</li>
@@ -86,8 +103,8 @@
                     </section>
 
                     <section class="other-skills">
-                        <p>Pozostałe umiejętności:</p>
                         <ul>
+                            <h2>Pozostałe umiejętności:</h2>
                             <li>Zarządzanie zespołem</li>
                             <li>Język angielski B2</li>
                             <li>
@@ -101,11 +118,14 @@
                         </ul>
                     </section>
                     <section class="tech-stack">
-                        <p>
-                            Uczę się technologii takich jak:
-                        </p>
                         <ul>
-                            <li>HTML + CSS + Javascript</li>
+                            <h2>
+                                Uczę się technologii takich
+                                jak:
+                            </h2>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Javascript</li>
                             <li>React.js</li>
                             <li>Express.js</li>
                             <li>MongoDB</li>
@@ -113,8 +133,8 @@
                     </section>
 
                     <section class="other-skills">
-                        <p>Pozostałe umiejętności:</p>
                         <ul>
+                            <h2>Pozostałe umiejętności:</h2>
                             <li>Zarządzanie zespołem</li>
                             <li>Język angielski B2</li>
                             <li>
