--- a/index.html
+++ b/index.html
@@ -234,25 +234,31 @@
                 >
                 <input
                     name="name"
+                    id="name"
                     type="text"
                     placeholder="Twoje imię"
                     required
                     class="form-username-input" />
-                <label for="e-mail" class="form-email"
+                <label for="email" class="form-email"
                     >E-mail:</label
                 >
                 <input
                     name="email"
+                    id="email"
                     type="email"
                     placeholder="Twój e-mail"
                     required
                     class="form-email-input" />
-                <label for="content" class="form-content"
+                <label
+                    for="content"
+                    class="form-content"
+                    style="padding-bottom: 10px"
                     >Treść wiadomości:</label
                 >
                 <textarea
-                    name="contact"
-                    placeholder="Treść wiadomości"
+                    id="content"
+                    name="content"
+                    placeholder="Zostaw mi wiadomość."
                     required
                     class="form-content-input"></textarea>
                 <input
