--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <a href="#contact">Kontakt</a>
                 </li>
                 <li>
-                    <a href="#5">Pobierz CV</a>
+                    <!-- <a href="#5">Pobierz CV</a> -->
                 </li>
             </ul>
         </nav>
@@ -99,6 +99,10 @@
                             <li>React.js</li>
                             <li>Express.js</li>
                             <li>MongoDB</li>
+                            <li>Node.js</li>
+                            <li>Git</li>
+                            <li>Wordpress</li>
+                            <li>API</li>
                         </ul>
                     </section>
 
@@ -114,25 +118,34 @@
                             <li>
                                 Znajomość środowiska Visual
                                 Studio Code
+                            </li>
+                            <li>
+                                Szybko przyswajam wiedzę
+                            </li>
+                            <li>
+                                Problemy rozwiązuję
+                                samodzielnie
+                            </li>
+                            <li>
+                                Szybko adaptuję się do
+                                nowego środowiska
                             </li>
                         </ul>
                     </section>
                     <section class="tech-stack">
                         <ul>
-                            <h2>
-                                Uczę się technologii takich
-                                jak:
-                            </h2>
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>Javascript</li>
-                            <li>React.js</li>
-                            <li>Express.js</li>
-                            <li>MongoDB</li>
+                            <h2>Moje zainteresowania:</h2>
+                            <li>Amerykańska motoryzacja</li>
+                            <li>Druk 3D</li>
+                            <li>Projektowanie modeli 3D</li>
+                            <li>Wycieczki rowerowe</li>
+                            <li>Internet of Things</li>
+                            <li>Składanie komputerów</li>
+                            <li>Dzielenie się wiedzą</li>
                         </ul>
                     </section>
 
-                    <section class="other-skills">
+                    <!-- <section class="other-skills">
                         <ul>
                             <h2>Pozostałe umiejętności:</h2>
                             <li>Zarządzanie zespołem</li>
@@ -146,7 +159,7 @@
                                 Studio Code
                             </li>
                         </ul>
-                    </section>
+                    </section> -->
                 </div>
             </article>
 
@@ -193,7 +206,7 @@
                     </ul>
                 </section>
                 <section class="my-books">
-                    <h2>Książki</h2>
+                    <h2>Literatura</h2>
                     <p>You don't know JS Kyle Simpson</p>
                     <p>Czysty kod Robert C. Martin</p>
                     <p>
@@ -214,8 +227,20 @@
             <article id="projects" class="projects-article">
                 <title>Projekty</title>
                 <p>Zobacz moje projekty:</p>
-                <section>React banking app</section>
-                <section>This website</section>
+                <section>
+                    <a
+                        target="_blank"
+                        href="https://github.com/MaciejOstrowskiIT/React_banking_app">
+                        React banking app
+                    </a>
+                </section>
+                <section>
+                    <a
+                        target="_blank"
+                        href="https://github.com/MaciejOstrowskiIT/MaciejOstrowskiIT.github.io">
+                        This website
+                    </a>
+                </section>
             </article>
         </section>
 
