new section + content changes

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!-- 
-            todo:
-            reader view 
-         -->
+        <script
+            defer
+            src="https://kit.fontawesome.com/b22ba9637b.js"
+            crossorigin="anonymous"></script>
         <meta charset="UTF-8" />
         <meta
             http-equiv="X-UA-Compatible"
@@ -206,40 +206,119 @@
                     </ul>
                 </section>
                 <section class="my-books">
-                    <h2>Literatura</h2>
-                    <p>You don't know JS Kyle Simpson</p>
-                    <p>Czysty kod Robert C. Martin</p>
+                    <h2>
+                        Bibliografia - czyli książki, które
+                        przeczytałem
+                    </h2>
+
                     <p>
-                        Pragmatyczny programista David
+                        "You don't know JS" - Kyle Simpson
+                    </p>
+                    <p>"Czysty kod" - Robert C. Martin</p>
+                    <p>
+                        "Pragmatyczny programista" - David
                         Thomas, Andrew Hunt
                     </p>
                     <p>
-                        JavaScript. Przewodnik. Poznaj język
-                        mistrzów programowania. Wydanie VII
-                        David Flanagan
+                        "JavaScript. Przewodnik. Poznaj
+                        język mistrzów programowania.
+                        Wydanie VII" - David Flanagan
                     </p>
                     <p>
-                        Git. Rozproszony system kontroli
-                        wersji Włodzimierz Gajda
+                        "Git. Rozproszony system kontroli
+                        wersji" - Włodzimierz Gajda
                     </p>
                 </section>
             </article>
+            <h2 style="text-align: center">
+                Zobacz moje projekty:
+            </h2>
             <article id="projects" class="projects-article">
                 <title>Projekty</title>
-                <p>Zobacz moje projekty:</p>
+
                 <section>
                     <a
                         target="_blank"
                         href="https://github.com/MaciejOstrowskiIT/React_banking_app">
+                        <div class="icon-div">
+                            <i
+                                class="fa-brands fa-react fa-6x"></i>
+                        </div>
                         React banking app
                     </a>
+                    <p>
+                        Aplikacja banku, która została
+                        stworzona w oparciu o&nbspReact.
+                        Bazuje na hookach, logice
+                        biznesowej, REST API, systemie
+                        autoryzacji użytkownika. Wszelkie
+                        dane klienta przechowywane są w&nbsp
+                        bazie danych MongoDB.
+                    </p>
+                    <h3>Stack technologiczny:</h3>
+                    <ul>
+                        <li>HTML5</li>
+                        <li>CSS3</li>
+                        <li>JavaScript</li>
+                        <li>React.js</li>
+                        <li>MongoDB</li>
+                        <li>Express.js</li>
+                        <li>Node.js</li>
+                    </ul>
                 </section>
                 <section>
                     <a
                         target="_blank"
                         href="https://github.com/MaciejOstrowskiIT/MaciejOstrowskiIT.github.io">
-                        This website
+                        <div class="icon-div">
+                            <i
+                                class="fa-brands fa-js fa-6x"></i>
+                            <i
+                                class="fa-brands fa-html5 fa-6x"></i>
+                            <i
+                                class="fa-brands fa-css3 fa-6x"></i>
+                        </div>
+                        Ta strona
                     </a>
+                    <p>
+                        Strona WWW, która bazuje na
+                        "czystym" JS, HTML5 oraz CSS3.
+                        Korzysta m.in. z&nbspFlexbox, Grid,
+                        CSS Variables. Budowana od podstaw
+                        responsywność, pozwala na
+                        bezproblemowe użytkowanie strony na
+                        tabletach, PC oraz smartfonach.
+                    </p>
+                    <h3>Stack technologiczny:</h3>
+                    <ul>
+                        <li>HTML5</li>
+                        <li>CSS3</li>
+                        <li>JavaScript</li>
+                    </ul>
+                </section>
+                <section>
+                    <a
+                        target="_blank"
+                        href="https://maciej-ostrowski.netlify.app/">
+                        <div class="icon-div">
+                            <i
+                                class="fa-brands fa-wordpress fa-6x"></i>
+                        </div>
+                        Portfolio Wordpress
+                    </a>
+                    <p>
+                        Strona budowana na CMS Wordpress.
+                        Powstała, aby tworzyć przejrzyste
+                        i&nbsp spójne portfolio, oraz jako
+                        poszerzenie wiedzy o&nbspsystemach
+                        zarządzania treścią (CMS)
+                    </p>
+                    <h3>Stack technologiczny:</h3>
+                    <ul>
+                        <li>Wordpress</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                    </ul>
                 </section>
             </article>
         </section>
