--- a/index.html
+++ b/index.html
@@ -163,6 +163,10 @@
                 </div>
             </article>
 
+            <h2 style="text-align: center">
+                Moje kwalifikacje:
+            </h2>
+
             <article
                 id="education"
                 class="education-article">
