new references in projects section

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         <li>Język programowania: C++</li>
                     </ul>
                 </section>
-                <section>
+                <section id="react_banking_section">
                     <h2>Kurs CODE:ME</h2>
                     <p>
                         Tytuł: Javascript + React od podstaw
@@ -240,7 +240,7 @@
             <article id="projects" class="projects-article">
                 <title>Projekty</title>
 
-                <section>
+                <section id="react_banking_app_section">
                     <a
                         target="_blank"
                         href="https://github.com/MaciejOstrowskiIT/React_banking_app">
@@ -270,7 +270,7 @@
                         <li>Node.js</li>
                     </ul>
                 </section>
-                <section>
+                <section id="vanilla_section">
                     <a
                         target="_blank"
                         href="https://github.com/MaciejOstrowskiIT/MaciejOstrowskiIT.github.io">
@@ -300,7 +300,7 @@
                         <li>JavaScript</li>
                     </ul>
                 </section>
-                <section>
+                <section id="wordpress_section">
                     <a
                         target="_blank"
                         href="https://maciej-ostrowski.netlify.app/">
@@ -308,7 +308,7 @@
                             <i
                                 class="fa-brands fa-wordpress fa-6x"></i>
                         </div>
-                        Portfolio Wordpress
+                        <p>Portfolio Wordpress</p>
                     </a>
                     <p>
                         Strona budowana na CMS Wordpress.
