--- a/index.html
+++ b/index.html
@@ -339,7 +339,9 @@
 
         <section id="contact" class="contact-section">
             <header class="visually-hidden">Kontakt</header>
-            <h3>Zachęcam do kontaktu poprzez formularz:</h3>
+            <h3 style="text-align: center">
+                Zachęcam do kontaktu poprzez formularz:
+            </h3>
             <form
                 class="contact-form"
                 style="font-size: 20px"
